# solana-dapp

./: README.md  next.config.ts  package-lock.json  package.json
anchor/: Anchor.toml  tsconfig.json
anchor/programs/counter/: Cargo.toml
anchor/programs/counter/src/: lib.rs
anchor/src/: counter-exports.ts
src/: middleware.ts
src/app/: layout.tsx
src/components/: app-header.tsx
src/components/counter/: counter-data-access.tsx  counter-ui.tsx
src/lib/: suppress-runtime-errors.ts
